deploy: 2b0fad02a7421723fd776c9119c2b70dccb5f696

--- a/index.html
+++ b/index.html
@@ -153,22 +153,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p align="center">
-  <p align="center">
-    <img src="https://magmawm.org/assets/magma.png" style="width: 15%;" alt="wmlogo"></img>
-    <h1 align="center">MagmaWM</h1>
- <h3 align="center">a versatile and customizable Wayland Compositor</h3>
-</p>
-</p>
-  <p align="center">
-    <img src="https://img.shields.io/github/languages/top/magmawm/magmawm?style=for-the-badge"/>
-    <img src="https://img.shields.io/github/commit-activity/m/magmawm/magmawm?style=for-the-badge"/>
-    <img src="https://img.shields.io/github/issues/magmawm/magmawm?style=for-the-badge"/>
-  </p>
-<h2 id="about"><a class="header" href="#about">About</a></h2>
-<p><strong>MagmaWM</strong> is a versatile and customizable window manager / <a href="https://wayland.freedesktop.org/">Wayland compositor</a>, currently in development and actively seeking contributions from the community. Built with the <a href="https://github.com/Smithay/smithay">Smithay</a> library and programmed in <a href="https://www.rust-lang.org/">Rust</a>, MagmaWM along with it's RON config provides users with flexibility and customization options. MagmaWM is licensed under GPLv3, ensuring that it remains open-source and free for all to use and contribute to.</p>
-<p>Join our <a href="https://discord.gg/VM8DkxaHfa">Discord</a>!</p>
-<h2 id="build"><a class="header" href="#build">Build</a></h2>
+                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<h2 id="magmawm-info"><a class="header" href="#magmawm-info">MagmaWM Info</a></h2>
+<p><strong>MagmaWM</strong> is a versatile and customizable <a href="https://wayland.freedesktop.org/">Wayland compositor</a> for Linux systems, made with the <a href="https://github.com/Smithay/smithay">Smithay</a> library and programmed in <a href="https://www.rust-lang.org/">Rust</a>.</p>
+<p>it is currently in heavy development, so bugs and drastic changes are to be expected as MagmaWM develops.</p>
+<h2 id="wayland-info"><a class="header" href="#wayland-info">Wayland Info</a></h2>
+<p>Unlike X, which has a display server which communicates with a WM, in Wayland the Window Manager (Compositor) is the Display Server.</p>
+<h2 id="support-info"><a class="header" href="#support-info">Support Info</a></h2>
+<p>If you are having issues, consider joining our <a href="https://discord.gg/VM8DkxaHfa">Discord server</a>.</p>
+<h2 id="building-magmawm"><a class="header" href="#building-magmawm">Building MagmaWM</a></h2>
+<h3 id="0-disclaimer"><a class="header" href="#0-disclaimer">0. Disclaimer</a></h3>
+<p>MagmaWM is under heavy development and is alpha-quality, so it is not recommended for daily use just yet.
+If you do wish to use it, make sure you have another WM installed so you have something to fall back on in case MagmaWM breaks.</p>
 <h3 id="1-dependencies"><a class="header" href="#1-dependencies">1. Dependencies</a></h3>
 <p>You will need to install MagmaWM's dependencies with your package manager of choice.</p>
 <h4 id="debian-and-derivatives-ubuntu-linux-mint-mx-linux-etc"><a class="header" href="#debian-and-derivatives-ubuntu-linux-mint-mx-linux-etc">Debian and derivatives (Ubuntu, Linux Mint, MX Linux, etc.)</a></h4>
