--- a/print.html
+++ b/print.html
@@ -186,6 +186,8 @@ You can also use <code>cargo run --release</code> to run the project.</p>
 If you really want to, run the following command to install MagmaWM: </p>
 <pre><code class="language-bash">cargo install --path .
 </code></pre>
+<h3 id="license"><a class="header" href="#license">License</a></h3>
+<p>The MagmaWM documentation is released under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons License SA 4.0</a> unless otherwise noted. </p>
 
                     </main>
 
